Alteração em algumas cores do css e textos nos arquivos html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -28,7 +28,7 @@
     <div class="row">    
       <div class="twelve columns">
         <h1>Ajude alguem hoje</h1>
-        <h4>Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui.</h4>
+        <h4>Inicio do projeto de humanidades e cidadania grupo 6</h4>
         <a href="#" class="btn">Hire me</a> 
       </div>
     </div>
@@ -36,7 +36,7 @@
     <section class="services">
       <div class="row">
         <div class="twelve columns">
-          <h3>My areas of expertise</h3>
+          <h3>Opções de caridade a ser fazer</h3>
         </div>
       </div>
       <div class="row">
