edição dos ::hover

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,7 +29,6 @@
       <div class="twelve columns">
         <h1>Ajude alguem hoje</h1>
         <h4>Inicio do projeto de humanidades e cidadania grupo 6</h4>
-        <a href="#" class="btn">Hire me</a> 
       </div>
     </div>
     
@@ -56,8 +55,8 @@
             Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
           </a>
         </div>
-      </div><!--end of .row-->
+      </div>
     </section>
-  </div><!--end of .container-->
+  </div>
 </header>
 
