Refatoração das classes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,49 +12,50 @@
 <header>
   <div class="container">
     
-    <div class="row">
-      <div class="twelve columns">
+    <div class="menu">
+      <div>
         <nav>
           <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Writing</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Doações</a></li>
+            <li><a href="#">Doações</a></li>
+            <li><a href="#">Visite</a></li>
+            <li><a href="#">Sobre</a></li>
           </ul>
         </nav>  
       </div> 
     </div>
 
-    <div class="row">    
-      <div class="twelve columns">
-        <h1>Ajude alguem hoje</h1>
-        <h4>Inicio do projeto de humanidades e cidadania grupo 6</h4>
+    <div class="titulo">    
+      <div>
+        <h1>Ajude Alguém Hoje</h1>
+        <h4></h4>
       </div>
     </div>
     
     <section class="services">
-      <div class="row">
-        <div class="twelve columns">
-          <h3>Opções de caridade a ser fazer</h3>
+      <div>
+        <div>
         </div>
       </div>
-      <div class="row">
-        <div class="one-half column">
+      <div>
+        <div>
           <a href="#">
-            <h4>Graphic Design</h4>
-            <span class="fa fa-picture-o"></span>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+            <h4>Casa de Ismael – Lar da Criança</h4>
+            <p>Prestar serviços socioassistenciais a crianças, adolescentes e seus familiares</p>
           </a>
         </div>
-        <div class="one-half column">
+        <div>
           <a href="#">
-            <h4>Web Design</h4>
-            <span class="fa fa-leaf"></span>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+            <h4>Casa de Jacó – Lar do Idoso</h4>
+            <p></p>
           </a>
         </div>
+        <div>
+            <a href="#">
+              <h4>Recanto Cristo vivo </h4>
+              <p>Prestar serviços socioassistenciais a crianças, adolescentes e seus familiares</p>
+            </a>
+          </div>
       </div>
     </section>
   </div>
