--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>PROJETO HC</title>
-  <link rel="stylesheet" href="../CSS/reset.css">
-  <link rel="stylesheet" href="../CSS/styles.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 
