implementação da seleção botões ::after e ::hover

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
       <h1 class="titulo-casas">Casas</h1>
     </div>
     
-    <section class="services">
+    <section class="casas">
 
       <div>
         <a href="#">
