refatoração da página

--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>PROJETO HC</title>
+	<link rel="icon" href="../img/s2.png">
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/styles.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+
 </head>
 
 <header>
@@ -15,7 +16,7 @@
     <div class="menu">
       <nav>
         <ul>
-          <li><a href="#casas">Casas</a></li>
+          <li><a href="#tipo-ajuda">Ajude</a></li>
           <li><a href="#">Contato</a></li>
           <li><a href="#">Sobre</a></li>
         </ul>
@@ -31,41 +32,37 @@
 <body>
   <div class="fundo-liso">
 
-    <div id="casas">
-      <h1 class="titulo-casas">Casas</h1>
+    <div id="tipo-ajuda">
+      <h1 class="	titulo-ajuda">Tipos de ajuda</h1>
     </div>
     
-    <section class="casas">
+    <section class="tipo-ajuda">
 
       <div>
         <a href="#">
-          <h4>Casa de Ismael – Lar da Criança</h4>
-          <p>Serviços socioassistenciais para crianças e adolescentes</p>
+          <h4>Monetária</h4>
+          <p></p>
         </a>
       </div>
       
       <div>
         <a href="#">
-          <h4>Casa de recuperação – Salve a si </h4>
-          <p>Serviços socioassistenciais para dependentes químicos</p>
+          <h4>Vestuário</h4>
+          <p></p>
         </a>
       </div>
 
       <div>
         <a href="#">
-          <h4>Casa de Jacó – Lar do Idoso</h4>
-          <p>Serviços socioassistenciais para idosos</p>
+          <h4>Alimento</h4>
+          <p></p>
         </a>
       </div>
 
     </section>
 
-
-	 <footer class="rodape">
-		<h2>2018.1</h2>	
-	</footer>
-
   </div>
+
 </body>
 
 
