imagem nos tipos de ajuda

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
       <div class="ajuda-botao">
         <a href="#">
           <h4>Monetária</h4>
-          <p></p>
+          <img src="../img/money.png" alt="dinheiro">
         </a>
       </div>
         
