Inserção das imagens

--- a/html/index.html
+++ b/html/index.html
@@ -32,8 +32,8 @@
 <body>
   <div class="fundo-liso">
 
-    <div id="tipo-ajuda">
-      <h1 class="	titulo-ajuda">Tipos de ajuda</h1>
+    <div id="tipo-ajuda">          
+      <h1 class="	titulo-ajuda">Tipos de da</h1>
     </div>
     
     <div class="tipo-ajuda">
