Refatoração do css, com o navigation-menu.css

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,9 @@
   <title>PROJETO HC</title>
 	<link rel="icon" href="../img/s2.png">
   <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/navigation-menu.css">
   <link rel="stylesheet" href="../css/styles.css">
+
 
 </head>
 
@@ -33,7 +35,7 @@
   <div class="fundo-liso">
 
     <div id="tipo-ajuda">          
-      <h1 class="	titulo-ajuda">Tipos de da</h1>
+      <h1 class="	titulo-ajuda">Tipos de ajuda</h1>
     </div>
     
     <div class="tipo-ajuda">
@@ -41,7 +43,7 @@
       <div class="ajuda-botao">
         <a href="#">
           <h4>Monetária</h4>
-          <img src="../img/money.png" alt="dinheiro">
+          <img src="../img/money.svg" alt="dinheiro">
         </a>
       </div>
         
