--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../css/navigation-menu.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/banner.css">
+  <link rel="stylesheet" href="../css/footer.css">
 
 
 </head>
