Refatoração do css com o ajuda.css

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
 	<link rel="icon" href="../img/s2.png">
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/navigation-menu.css">
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/ajuda.css">
   <link rel="stylesheet" href="../css/banner.css">
   <link rel="stylesheet" href="../css/footer.css">
 
