--- a/html/index.html
+++ b/html/index.html
@@ -41,28 +41,28 @@
       <div class="ajuda-botao">
         <a href="#">
           <h4>Alimento</h4>
-          <img src="../img/money.svg" alt="dinheiro">
+          <img class="" alt="alimento">
         </a>
       </div>
         
       <div class="ajuda-botao">
         <a href="#">
           <h4>Dinheiro</h4>
-          <p></p>
+          <img class="money-img" alt="dinheiro">
         </a>
       </div>
 
       <div class="ajuda-botao">
         <a href="#">
           <h4>Medicamento</h4>
-          <p></p>
+          <img class="" alt="medicamento">
         </a>
       </div>
 
       <div class="ajuda-botao">
         <a href="#">
           <h4>Vestuário</h4>
-          <p></p>
+          <img class="" alt="vestuário">
         </a>
       </div>
 
