--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../css/ajuda.css">
   <link rel="stylesheet" href="../css/banner.css">
   <link rel="stylesheet" href="../css/footer.css">
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans" rel="stylesheet">
 
 
 </head>
@@ -27,7 +28,7 @@
       </nav>  
     </div>
 
-    <h1 class="titulo">ajude alguém ainda hoje</h1>
+    <h1 class="titulo">Ajude alguém ainda hoje</h1>
 
     </div>    
   </div> 
@@ -38,30 +39,30 @@
 
     <div class="tipo-ajuda" id="ajuda">
     		
-      <div class="ajuda-botao">
+      <div class="ajuda-botao-money">
         <a href="#">
-          <h4>Alimento</h4>
+          <h1 class="titulo-botao-ajuda">Alimento</h1>
           <img class="" alt="alimento">
         </a>
       </div>
         
       <div class="ajuda-botao">
         <a href="#">
-          <h4>Dinheiro</h4>
+          <h1 class="titulo-botao-ajuda">Dinheiro</h1>
           <img class="money-img" alt="dinheiro">
         </a>
       </div>
 
       <div class="ajuda-botao">
         <a href="#">
-          <h4>Medicamento</h4>
+          <h1 class="titulo-botao-ajuda">Medicamento</h1>
           <img class="" alt="medicamento">
         </a>
       </div>
 
       <div class="ajuda-botao">
         <a href="#">
-          <h4>Vestuário</h4>
+          <h1 class="titulo-botao-ajuda">Vestuário</h1>
           <img class="" alt="vestuário">
         </a>
       </div>
