Correção dos botões de ajuda

--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
 
     <div class="tipo-ajuda" id="ajuda">
     		
-      <div class="ajuda-botao-money">
+      <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Alimento</h1>
           <img class="" alt="alimento">
