utilização dos novos svg's

--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
       </nav>  
     </div>
 
-    <h1 class="titulo">Ajude alguém ainda hoje</h1>
+    <h1 class="titulo">Pois ajudar alguém </h1>
 
     </div>    
   </div> 
@@ -42,7 +42,7 @@
       <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Alimento</h1>
-          <img class="" alt="alimento">
+          <img class="food-img" alt="alimento">
         </a>
       </div>
         
@@ -56,14 +56,14 @@
       <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Medicamento</h1>
-          <img class="" alt="medicamento">
+          <img class="medicine-img" alt="medicamento">
         </a>
       </div>
 
       <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Vestuário</h1>
-          <img class="" alt="vestuário">
+          <img class="clothes-img" alt="vestuário">
         </a>
       </div>
 
