opacidade do cover

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../css/ajuda.css">
   <link rel="stylesheet" href="../css/banner.css">
   <link rel="stylesheet" href="../css/footer.css">
-  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
 
 
 </head>
@@ -28,7 +28,7 @@
       </nav>  
     </div>
 
-    <h1 class="titulo">Pois ajudar alguém </h1>
+    <h1 class="titulo">Pois ajudar alguém <strong class="faz-bem">faz bem</strong></h1>
 
     </div>    
   </div> 
@@ -55,7 +55,7 @@
 
       <div class="ajuda-botao">
         <a href="#">
-          <h1 class="titulo-botao-ajuda">Medicamento</h1>
+          <h1 class="titulo-botao-ajuda">Remédio</h1>
           <img class="medicine-img" alt="medicamento">
         </a>
       </div>
