Adicionando imagens no hmtl

--- a/html/index.html
+++ b/html/index.html
@@ -44,28 +44,28 @@
       <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Alimento</h1>
-          <img class="food-img" alt="alimento">
+          <img src="../img/food.svg" class="food-img" alt="alimento">
         </a>
       </div>
         
       <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Dinheiro</h1>
-          <img class="money-img" alt="dinheiro">
+          <img src="../img/money.svg" class="money-img" alt="dinheiro">
         </a>
       </div>
 
       <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Remédio</h1>
-          <img class="medicine-img" alt="medicamento">
+          <img src="../img/medicine.svg" class="medicine-img" alt="medicamento">
         </a>
       </div>
 
       <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Vestuário</h1>
-          <img class="clothes-img" alt="vestuário">
+          <img src="../img/hoodie.svg" class="clothes-img" alt="vestuário">
         </a>
       </div>
 
