floating box para os tipos de ajuda

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>PROJETO HC</title>
-	<link rel="icon" href="../img/s2.png">
+  <link rel="icon" href="../img/s2.png">
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/navigation-menu.css">
   <link rel="stylesheet" href="../css/ajuda.css">
@@ -39,8 +39,9 @@
 
   <div class="fundo-liso">
 
-    <div class="tipo-ajuda" id="ajuda">
-    		
+		<div class="fundo-titulo-ajuda" ><h1 class="titulo-ajuda">Como está disposto a ajudar?</h1></div>
+    <section class="tipo-ajuda" id="ajuda">
+      
       <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Alimento</h1>
@@ -69,7 +70,7 @@
         </a>
       </div>
 
-    </div>
+    </section>
 
   </div>
   
