--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
 
 
+<script src="https://www.gstatic.com/firebasejs/5.0.2/firebase.js"></script>
+<script src="js/app.js"></script>
+
 </head>
 
 <header>
