--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>PROJETO HC</title>
+  <meta name = "viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  
   <link rel="icon" href="../img/s2.png">
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/navigation-menu.css">
