--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,18 @@
   <meta name = "viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   
-  <link rel="icon" href="../img/s2.png">
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/navigation-menu.css">
-  <link rel="stylesheet" href="../css/ajuda.css">
-  <link rel="stylesheet" href="../css/banner.css">
-  <link rel="stylesheet" href="../css/footer.css">
-  <link rel="stylesheet" href="../css/contato.css">
+  <link rel="icon" href="./img/s2.png">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/navigation-menu.css">
+  <link rel="stylesheet" href="./css/ajuda.css">
+  <link rel="stylesheet" href="./css/banner.css">
+  <link rel="stylesheet" href="./css/footer.css">
+  <link rel="stylesheet" href="./css/contato.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
 
 
 <script src="https://www.gstatic.com/firebasejs/5.0.2/firebase.js"></script>
-<script src="js/app.js"></script>
+<script src="js/firebase.js"></script>
 
 </head>
 
@@ -51,28 +51,28 @@
       <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Alimento</h1>
-          <img src="../img/food.svg" class="food-img" alt="alimento">
+          <img src="./img/food.svg" class="food-img" alt="alimento">
         </a>
       </div>
         
       <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Dinheiro</h1>
-          <img src="../img/money.svg" class="money-img" alt="dinheiro">
+          <img src="./img/money.svg" class="money-img" alt="dinheiro">
         </a>
       </div>
 
       <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Remédio</h1>
-          <img src="../img/medicine.svg" class="medicine-img" alt="medicamento">
+          <img src="./img/medicine.svg" class="medicine-img" alt="medicamento">
         </a>
       </div>
 
       <div class="ajuda-botao">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Vestuário</h1>
-          <img src="../img/hoodie.svg" class="clothes-img" alt="vestuário">
+          <img src="./img/hoodie.svg" class="clothes-img" alt="vestuário">
         </a>
       </div>
 
@@ -80,8 +80,10 @@
 
     
     <div id="contato" class="contato-form">
+
       <h1 class="contato-title">Contato</h1>
-      <form>
+
+      <form class="form-ajuda">
         <input name="nome" type="text" class="form-control" placeholder=" Nome" required> <br>
         <input name="email" type="text" class="form-control" placeholder=" Email" required> <br>
         <textarea name="mensagem" class="form-control" placeholder="Mensagem" rows="4" required></textarea><br>
