Adição dos scripts para modularizar os códigos JavaScript

--- a/public/index.html
+++ b/public/index.html
@@ -48,28 +48,28 @@
 		<div class="fundo-titulo-ajuda" ><h1 class="titulo-ajuda">Como está disposto a ajudar?</h1></div>
     <section class="tipo-ajuda" id="ajuda">
       
-      <div class="ajuda-botao">
+      <div class="ajuda-botao" id="btnFood">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Alimento</h1>
           <img src="./img/food.svg" class="food-img" alt="alimento">
         </a>
       </div>
         
-      <div class="ajuda-botao">
+      <div class="ajuda-botao" id="btnMoney">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Dinheiro</h1>
           <img src="./img/money.svg" class="money-img" alt="dinheiro">
         </a>
       </div>
 
-      <div class="ajuda-botao">
+      <div class="ajuda-botao" id="btnMedicine">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Remédio</h1>
           <img src="./img/medicine.svg" class="medicine-img" alt="medicamento">
         </a>
       </div>
 
-      <div class="ajuda-botao">
+      <div class="ajuda-botao" id="btnClothe">
         <a href="#">
           <h1 class="titulo-botao-ajuda">Vestuário</h1>
           <img src="./img/hoodie.svg" class="clothes-img" alt="vestuário">
@@ -98,11 +98,7 @@
   </div>
   
 
-
-
-
-
-
+  <script src="./js/btnAjuda.js"></script>
 </body>
 
 
