--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     <section class="tipo-ajuda" id="ajuda">
       
       <div class="ajuda-botao" id="btnFood">
-        <a >
+        <a href="html/institution.html">
           <h1 class="titulo-botao-ajuda">Alimento</h1>
           <img src="./img/food.svg" class="food-img" alt="alimento">
         </a>
