Salvando no localStorage os arrays contendo os dados das instituições presentes no storage do Firebase

--- a/public/html/institution.html
+++ b/public/html/institution.html
@@ -13,7 +13,7 @@
 	<h1 id="titulo-tipo-de-ajuda"></h1>
 
 	<script>		
-		let clickedButton = localStorage.getItem("clickedButton")
+		let clickedButton = localStorage.getItem("@help-option")
 		document.getElementById("titulo-tipo-de-ajuda").innerHTML = "Instituições que precisam de " + clickedButton
 	</script>
 
