Inserção de novos nodes no firebase com base no tipo de ajuda e refatorando o código que estava no institution.html em um .js a parte

--- a/public/html/institution.html
+++ b/public/html/institution.html
@@ -12,14 +12,10 @@
 <header>
 	<h1 id="titulo-tipo-de-ajuda"></h1>
 
-	<script>		
-		let clickedButton = localStorage.getItem("@help-option")
-		document.getElementById("titulo-tipo-de-ajuda").innerHTML = "Instituições que precisam de " + clickedButton
-	</script>
-
 </header>
 
 <body>
 
+	<script src="../js/institutionPage.js"></script>
 </body>
 </html>
