Listando a instituição correspondente no html

--- a/public/html/institution.html
+++ b/public/html/institution.html
@@ -11,13 +11,15 @@
 
 </head>
 
-
 <header>
 	<h1 id="titulo-tipo-de-ajuda"></h1>
-
 </header>
 
 <body>
+
+	<div class="fundo-liso">
+		<h2 id="sobre-instituicao"></h2>
+	</div>
 
 	<script src="../js/institutionPage.js"></script>
 </body>
