modularizando o código separando as funções de callback necessárias para pergar os nodes do firebase

--- a/public/html/institution.html
+++ b/public/html/institution.html
@@ -18,9 +18,13 @@
 <body>
 
 	<div class="fundo-liso">
-		<h2 id="sobre-instituicao"></h2>
+		<div class="lista-instituicao">
+
+			<h2 id="sobre-instituicao"></h2>
+		</div>
 	</div>
 
+	<script src="../js/firebaseCallback.js"></script>
 	<script src="../js/institutionPage.js"></script>
 </body>
 </html>
