Pegando o índice do botão  com o nome da instituição clicado

--- a/public/html/select-institution.html
+++ b/public/html/select-institution.html
@@ -23,6 +23,7 @@
 	</div>
 
 	<script src="../js/firebaseCallback.js"></script>
-	<script src="../js/institutionPage.js"></script>
+	<script src="../js/institutionsPage.js"></script>
+	<script src="../js/Institution.js"></script>
 </body>
 </html>
