Utilização de promise para criar uma função de sleep()

--- a/public/html/select-institution.html
+++ b/public/html/select-institution.html
@@ -16,6 +16,10 @@
 
 <body>
 
+	<div class="loader-bg">
+		<div id="loader-firebase" class="loader"></div>
+	</div>
+
 	<div class="fundo-liso">
 		<div class="lista-instituicao">
 			
