--- a/public/html/select-institution.html
+++ b/public/html/select-institution.html
@@ -11,16 +11,19 @@
 </head>
 
 <header>
+	
 	<h1 id="titulo-tipo-de-ajuda"></h1>
+	<div id="bg-loader-firebase" class="loader-bg">
+		<div id="loader-firebase" class="loader" ></div>
+	</div>
 </header>
 
 <body>
 
-	<div class="loader-bg">
-		<div id="loader-firebase" class="loader"></div>
-	</div>
+	
 
 	<div class="fundo-liso">
+		
 		<div class="lista-instituicao">
 			
 		</div>
