--- a/public/html/institution.html
+++ b/public/html/institution.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="../css/reset.css">
+	<link rel="stylesheet" type="text/css" href="../css/institution.css" />
     <title>Document</title>
 </head>
+
+<header>
+    <div class="container">
+        <h1 id="title-name"></h1>
+    </div>
+</header>
+
 <body>
-    <h1 id="title-name"></h1>
-    
+ 
+    <div>
+        
+    </div>
 
     <script src="../js/Institution.js"></script>
 </body>
