Redirecionamento condicional, pois a pagina para doações monetárias é totalmente diferente dos outros tipos de doação

--- a/public/html/institution-general.html
+++ b/public/html/institution-general.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 
-<header>
-    <div class="container">
+<header class="container-instituição">
+    <div>
         <h1 id="title-name"></h1>
     </div>
 </header>
