--- a/public/html/select-institution.html
+++ b/public/html/select-institution.html
@@ -10,7 +10,7 @@
 	<script src="../js/firebase.js" ></script>
 </head>
 
-<header>
+<header class="container-lista-instituicao">
 	
 	<h1 id="titulo-tipo-de-ajuda"></h1>
 	<div id="bg-loader-firebase" class="loader-bg">
