--- a/public/html/institution-general.html
+++ b/public/html/institution-general.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
 	<link rel="stylesheet" type="text/css" href="../css/institution.css" />
-    <title>Document</title>
+    <title>Doação</title>
 </head>
 
 <header class="container-instituição">
