--- a/public/html/select-institution.html
+++ b/public/html/select-institution.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Page Title</title>
+	<title>Lista de instituições</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="../css/reset.css">
 	<link rel="stylesheet" type="text/css" href="../css/institution.css" />
@@ -14,6 +14,7 @@
 	
 	<h1 id="titulo-tipo-de-ajuda"></h1>
 	<div id="bg-loader-firebase" class="loader-bg">
+		<h1 id="loading-title" class="loading">Buscando as instituições</h1>
 		<div id="loader-firebase" class="loader" ></div>
 	</div>
 </header>
