--- a/public/html/institution-general.html
+++ b/public/html/institution-general.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../css/institution.css" />
+    <link rel="stylesheet" type="text/css" href="../css/institution.css">
+    <link rel="stylesheet" type="text/css" href="../css/donation-general.css">
     <title>Doação</title>
-
-    <style>
-    #map {
-        height: 400px;
-        width: 100%;
-    }
-    </style>
-
 </head>
 
 <header class="container-instituição">
@@ -28,7 +21,7 @@
 
 
 
-    
+
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATU-j8JH1Blwx0wUG2ZKQ0Nln04xgjJBQ&callback=initMap"></script>
     <script src="../js/Institution.js"></script>
     <script src="../js/GoogleMapsAPI.js"></script>
