Recuperando o endereço do localStorage e usando o índex da instituição selecionada e listando-a

--- a/public/html/institution-general.html
+++ b/public/html/institution-general.html
@@ -17,7 +17,12 @@
 
 <body>
  
-    <div id="map"></div>    
+    <div class ="fundo-liso">
+
+        <h1 class="send-donation">Envie sua doação para</h1>
+        <div id="map"></div>    
+        <h1 id="address"></h1>
+    </div>
 
 
 
