imagem para estilização do lista de instituições

--- a/public/html/select-institution.html
+++ b/public/html/select-institution.html
@@ -21,9 +21,8 @@
 <body>
 	
 	<div class="fundo-liso">
-		
+		<img class="care-img" src="../img/care.png"/>
 		<div class="lista-instituicao">
-			
 		</div>
 	</div>
 
