Floating button para voltar para o index.html

--- a/public/html/institution-general.html
+++ b/public/html/institution-general.html
@@ -17,11 +17,19 @@
 
 <body>
  
+    
+
     <div class ="fundo-liso">
 
         <h1 class="send-donation">Envie sua doação para</h1>
         <div id="map"></div>    
         <h1 id="address"></h1>
+    </div>
+
+    <div class="btn">
+        <a href="../index.html" class="floating-btn">
+            <img class="btn-img" src="../img/left-arrow.png"/>
+        </a>
     </div>
 
 
