Parágrafo para falar sobre a instiuição selecionada

--- a/public/html/institution-general.html
+++ b/public/html/institution-general.html
@@ -18,9 +18,11 @@
 <body>
  
     
-
     <div class ="fundo-liso">
-
+        
+        <p class="sobre-instit">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus tincidunt velit et tristique. Integer in ante id nibh rutrum tincidunt. Sed ut quam ac sapien dictum imperdiet. Proin semper augue in ante porttitor faucibus. Quisque id posuere odio, eu placerat dolor. Aliquam metus odio, posuere eget consequat ac, condimentum at justo.
+        </p>   
         <h1 class="send-donation">Envie sua doação para</h1>
         <div id="map"></div>    
         <h1 id="address"></h1>
