Estilizando a transação bancária

--- a/public/html/institution-money.html
+++ b/public/html/institution-money.html
@@ -24,6 +24,12 @@
         </p>   
 
         <div class="money-donation"> <!-- pegar do firebase-->
+            
+            <div class="key-value">
+                <img src="../img/coins.png" class="money-img"/>
+                <h1 class="money-donation-title">Doe qualquer quantia</h1>
+            </div>
+
             <div class="key-value">
                 <b class="key">CPF/CNPJ:</b>
                 <h1 class="value">066.000.999-34</h1>
