Refatoração no CSS e a criação do Institution-money.js responsável por settar os dados para transação bancária

--- a/public/html/institution-money.html
+++ b/public/html/institution-money.html
@@ -25,7 +25,7 @@
 
         <div class="money-donation"> <!-- pegar do firebase-->
             
-            <div class="key-value">
+            <div class="money-title">
                 <img src="../img/coins.png" class="money-img"/>
                 <h1 class="money-donation-title">Doe qualquer quantia</h1>
             </div>
@@ -62,6 +62,7 @@
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATU-j8JH1Blwx0wUG2ZKQ0Nln04xgjJBQ&callback=initMap"></script>
     <script src="../js/Institution.js"></script>
+    <script src=".../js/Institution-money.js"></script>
     <script src="../js/GoogleMapsAPI.js"></script>
 </body>
 </html>
