--- a/public/html/select-institution.html
+++ b/public/html/select-institution.html
@@ -21,9 +21,11 @@
 <body>
 
 	<div class="fundo-liso">
-		<img class="care-img" src="../img/care.png"/>
-		<div class="lista-instituicao">
+		<div class="saiba-mais-instit">
+			<img class="care-img" src="../img/care.png"/>
+			<h1 class="saiba-mais-txt">Saiba mais sobre as instituições</h1>
 		</div>
+		<div class="lista-instituicao"></div>
 	</div>
 
 	<script src="../js/firebaseCallback.js"></script>
