Adicionando os dados para a transação bancária vindas do banco de dados

--- a/public/html/institution-money.html
+++ b/public/html/institution-money.html
@@ -32,17 +32,17 @@
 
             <div class="key-value">
                 <b class="key">CPF/CNPJ:</b>
-                <h1 class="value">066.000.999-34</h1>
+                <h1 id="ID-money" class="value">066.000.999-34</h1>
             </div>
 
             <div class="key-value">
                 <b class="key">Número da agência:</b>
-                <h1 class="value">1234</h1>
+                <h1 id="agency-money" class="value">1234</h1>
             </div>
 
             <div class="key-value">
                 <b class="key">Número da conta:</b> 
-                <h1 class="value">12345678-9/<h1>
+                <h1 id="account-money" class="value">12345678-9/<h1>
             </div>
         </div>
 
@@ -61,7 +61,7 @@
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATU-j8JH1Blwx0wUG2ZKQ0Nln04xgjJBQ&callback=initMap"></script>
     <script src="../js/Institution.js"></script>
-    <script src=".../js/Institution-money.js"></script>
+    <script src="../js/InstitutionMoney.js"></script>
     <script src="../js/GoogleMapsAPI.js"></script>
 </body>
 </html>
