Adicionando informação sobre a instituição vindas do Firebase

--- a/public/html/institution-money.html
+++ b/public/html/institution-money.html
@@ -19,8 +19,7 @@
     
     <div class ="fundo-liso">
         
-        <p class="sobre-instit">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus tincidunt velit et tristique. Integer in ante id nibh rutrum tincidunt. Sed ut quam ac sapien dictum imperdiet. Proin semper augue in ante porttitor faucibus. Quisque id posuere odio, eu placerat dolor. Aliquam metus odio, posuere eget consequat ac, condimentum at justo.
+        <p id="about-inst" class="sobre-instit">
         </p>   
 
         <div class="money-donation"> <!-- pegar do firebase-->
